--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+  		<sonar.organization>jahid611</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
