fix: ajout de la dependance cucumber-spring manquante

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-spring</artifactId>
+    <version>7.5.0</version>
+    <scope>test</scope>
+</dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
